# nightmind

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dev  EXECUTION_PLAN.md  Justfile  Makefile  README.md  TASKS.md  docker-compose.prod.yml  docker-compose.yml  plan.md  todo.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependencies.yml  release.yml
doc/: 00-overview.md  01-architecture.md  02-core-modules.md  03-agent-system.md  04-session-management.md  05-content-processing.md  06-integrations.md  07-data-model.md  08-api-design.md  09-audio-handling.md  10-deployment.md  api.md  architecture.md
docker/postgres/init/: 00-extensions.sh
docs/plans/: 2025-02-26-rig-agent-integration-design.md  2025-02-26-rig-agent-integration.md
examples/: simple_agent.rs  websocket_client.rs
migrations/: 001_initial.down.sql  001_initial.up.sql  002_add_vector_index.down.sql  002_add_vector_index.up.sql  003_performance_optimization.down.sql  003_performance_optimization.up.sql
src/: error.rs  lib.rs  main.rs
src/api/: dto.rs  handlers.rs  middleware.rs  mod.rs  router.rs  websocket.rs
src/api/dto/: mod.rs  requests.rs  responses.rs  websocket.rs
src/config/: logging.rs  mod.rs  settings.rs
src/core/: mod.rs
src/core/agent/: builder.rs  mod.rs  prompts.rs  tools.rs
src/core/agent/tools/: knowledge.rs
src/core/content/: cache.rs  fatigue.rs  mod.rs  rhythm.rs  transformer.rs
src/core/memory/: extractor.rs  fsrs.rs  mod.rs  retrieval.rs
src/core/session/: flow.rs  manager.rs  mod.rs  snapshot.rs  state.rs  topic_stack.rs
src/repository/: db.rs  knowledge.rs  migration.rs  mod.rs  redis.rs  review_interval.rs  session.rs  user.rs
src/repository/models/: knowledge.rs  mod.rs  review_interval.rs  session.rs  user.rs
src/services/: audio.rs  integration.rs  mod.rs  stt.rs  tts.rs  vector.rs
tests/: agent_integration.rs  integration_tests.rs  websocket_tests.rs
