# ============================================================
# NightMind - 睡前认知巩固 AI 伴学 Agent
# ============================================================

[package]
name = "nightmind"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["NightMind Contributors"]
description = "AI-powered learning companion for bedtime memory consolidation"
license = "MIT"
repository = "https://github.com/yourusername/nightmind"
keywords = ["ai", "agent", "learning", "sleep", "memory"]
categories = ["ai", "web-programming"]

[lib]
name = "nightmind"
path = "src/lib.rs"

[[bin]]
name = "nightmind"
path = "src/main.rs"

# ============================================================
# 依赖配置
# ============================================================
[dependencies]
# ============================================================
# Web 框架
# ============================================================
axum = { version = "0.8", features = ["ws", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = [
    "cors",
    "trace",
    "limit",
    "compression-gzip",
    "compression-br",
    "timeout",
    "request-id"
] }
tower-sessions = "0.13"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }

# ============================================================
# 异步运行时
# ============================================================
tokio = { version = "1.35", features = [
    "full",
    "tracing"
] }
tokio-stream = "0.1"
futures = "0.3"
async-stream = "0.3"
futures-util = "0.3"

# ============================================================
# Agent & AI (Rig 框架)
# ============================================================
rig-core = "0.31"
async-trait = "0.1"

# ============================================================
# 序列化
# ============================================================
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.4"

# ============================================================
# 数据库
# ============================================================
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "uuid",
    "json",
    "migrate",
    "tls-rustls"
] }

# ============================================================
# Redis
# ============================================================
redis = { version = "0.27", features = [
    "tokio-comp",
    "connection-manager",
    "cluster",
    "json",
    "aio"
] }

# ============================================================
# 向量数据库 (Qdrant)
# ============================================================
qdrant-client = "1.17"

# ============================================================
# 时间处理
# ============================================================
chrono = { version = "0.4", features = [
    "serde",
    "clock"
] }
time = "0.3"

# ============================================================
# UUID
# ============================================================
uuid = { version = "1.6", features = [
    "v4",
    "v7",
    "serde",
    "fast-rng"
] }

# ============================================================
# HTTP 客户端
# ============================================================
reqwest = { version = "0.12", features = [
    "json",
    "stream",
    "multipart",
    "cookies",
    "rustls-tls"
], default-features = false }

# ============================================================
# WebSocket
# ============================================================
tokio-tungstenite = "0.28"
tungstenite = "0.28"

# ============================================================
# 认证
# ============================================================
jsonwebtoken = "9.2"
bcrypt = "0.16"

# ============================================================
# 环境变量与配置
# ============================================================
config = "0.14"
dotenvy = "0.15"
envy = "0.4"

# ============================================================
# 日志与追踪
# ============================================================
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "json",
    "fmt"
] }
tracing-appender = "0.2"
tracing-opentelemetry = "0.25"

# ============================================================
# 错误处理
# ============================================================
anyhow = "1.0"
thiserror = "1.0"
color-eyre = "0.6"

# ============================================================
# 工具库
# ============================================================
itertools = "0.13"
once_cell = "1.19"
lazy_static = "1.4"
parking_lot = "0.12"

# ============================================================
# 音频处理 (可选)
# ============================================================
# symphonia = { version = "0.5", optional = true }
# rodio = { version = "0.19", optional = true }

# ============================================================
# OpenTelemetry (可选) - 暂时禁用
# ============================================================
# opentelemetry = { version = "0.24", optional = true, features = ["trace"] }
# opentelemetry-jaeger = { version = "0.22", optional = true }
# opentelemetry-otlp = { version = "0.17", optional = true }

# ============================================================
# 开发依赖
# ============================================================
[dev-dependencies]
# 测试
tokio-test = "0.4"
criterion = "0.5"
proptest = "1.4"
quickcheck = "1.0"

# Mock
mockall = "0.13"
wiremock = "0.6"
httpmock = "0.7"

# 测试工具
pretty_assertions = "1.4"
serial_test = "3.0"

# ============================================================
# 特性配置
# ============================================================
[features]
default = ["postgres", "migrate"]

# 生产环境 (暂时简化)
# production = ["opentelemetry", "jaeger"]

# 开发环境
# dev = ["production"]

# 测试环境
# test = ["dev"]

# 数据库特性
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]

# 迁移工具
migrate = ["sqlx/migrate"]

# 可观测性 (暂时禁用)
# opentelemetry = [
#     "dep:opentelemetry",
#     "dep:tracing-opentelemetry"
# ]
# jaeger = ["opentelemetry", "dep:opentelemetry-jaeger"]
# otlp = ["opentelemetry", "dep:opentelemetry-otlp"]

# 本地 LLM 支持
local-llm = []

# ============================================================
# 性能优化配置
# ============================================================
[profile.dev]
# 开发模式优化
opt-level = 0
debug = true
split-debuginfo = "unpacked"

[profile.dev.package."*"]
# 依赖包使用基本优化以加快编译
opt-level = 2

[profile.release]
# 发布模式优化
opt-level = 3
debug = false
strip = true
lto = true
codegen-units = 1
panic = "abort"

# 性能分析
[profile.profiling]
inherits = "release"
debug = true
strip = false

# ============================================================
# 针对不同组件的优化
# ============================================================
# Agent 相关代码优化
[profile.dev.package."rig-core"]
opt-level = 2

# 数据库相关代码优化
[profile.dev.package."sqlx-core"]
opt-level = 2

# ============================================================
# 示例配置
# ============================================================
[[example]]
name = "simple_agent"
path = "examples/simple_agent.rs"

[[example]]
name = "websocket_client"
path = "examples/websocket_client.rs"

# ============================================================
# Lints (Rust 1.75+)
# ============================================================
[lints.rust]
# 安全相关
unsafe_code = "forbid"
unreachable_pub = "warn"
unused_crate_dependencies = "warn"

# ============================================================
# Clippy lints
# ============================================================
[lints.clippy]
# 正确性
all = "warn"
pedantic = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"

# 允许的例外
too_many_arguments = "allow"
type_complexity = "allow"
let_underscore_untyped = "allow"
missing_docs_in_private_items = "allow"
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
float_cmp = "allow"
